--- a/styles.scss
+++ b/styles.scss
@@ -20,3 +20,24 @@ ul {
     list-style-type: circel;
     color: white;
 }
+
+.trafficlight{
+    width: 50px;
+    height: 150px;
+    background-color: white;
+    border-radius: 50px;
+    margin: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+    padding: 15px;
+}
+
+.circle{
+    width: 40px;
+    height: 40px;
+    background-color: rgb(0, 0, 0, 0.3);
+    border-radius: 50%;
+    position: relative;
+}
