--- a/styles.scss
+++ b/styles.scss
@@ -22,22 +22,73 @@ ul {
 }
 
 .trafficlight{
-    width: 50px;
-    height: 150px;
+    width: 45px;
+    height: 170px;
     background-color: white;
-    border-radius: 50px;
+    border-radius: 40px;
     margin: 10px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     flex-direction: column;
-    padding: 15px;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-bottom: 10px;
+    padding-top: 10px;
 }
 
 .circle{
-    width: 40px;
-    height: 40px;
-    background-color: rgb(0, 0, 0, 0.3);
+    width: 30px;
+    height: 30px;
+    background-color: rgba(0, 0, 0, 0.3);
     border-radius: 50%;
     position: relative;
+}
+
+/*.circle:after{
+    border-right: 3px solid rgba(255,255,255, 0.5);
+    border-radius: 50%;
+    content: '';
+    position: absolute;
+    top: 3px;
+    right: 3px;
+    width: 25px;
+    height: 25px;
+}
+*/
+
+.circle.red{
+    background-color: #c0392b;
+    background-origin: 0 0 10px 5px #c0392b;
+}
+
+.circle.yellow{
+    background-color: #f1c40f;
+    background-origin: 0 0 10px 5px #f1c40f;
+}
+
+.circle.green{
+    background-color: #2ecc71;
+    background-origin: 0 0 10px 5px #2ecc71;
+}
+
+.circle.white{
+    background-color: rgb(221, 221, 221);
+    background-origin: 0 0 10px 5px rgb(221, 221, 221);
+}
+
+.circle p{
+    text-align: center;
+    margin: 0px;
+    padding: 0px;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.percentage{
+    font-size: smaller;
+    font-weight: 700;
+    position: absolute;
+    margin: 0px;
 }
