--- a/styles.scss
+++ b/styles.scss
@@ -13,7 +13,7 @@ h2 {
 }
 
 h3 {
-    color: rgb(155, 155, 155);
+    color: rgb(189, 189, 189);
 }
 
 ul {
@@ -22,15 +22,15 @@ ul {
 }
 
 .trafficlight{
-    width: 45px;
-    height: 170px;
+    width: 170px;
+    height: 45px;
     background-color: white;
     border-radius: 40px;
     margin: 10px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    flex-direction: column;
+    flex-direction: row;
     padding-left: 15px;
     padding-right: 15px;
     padding-bottom: 10px;
