--- a/styles.scss
+++ b/styles.scss
@@ -92,3 +92,15 @@ ul {
     position: absolute;
     margin: 0px;
 }
+
+
+label {
+    display: block;
+    font: 1rem 'Fira Sans', sans-serif;
+    color: white;
+}
+
+input,
+label {
+    margin: .0.5rem 0;
+}
