--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,33 @@ body {
 }
 
 h1 {
+  font-size: 30px;
   color: #fdc220;
+}
+
+.container {
+  margin: 20px 15px 20px 15px;
+}
+
+#btnAbfrage {
+  padding-left: 2px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.btn-success {
+  position: absolute;
 }
 
 h2 {
