--- a/styles.scss
+++ b/styles.scss
@@ -5,7 +5,24 @@ body {
 }
 
 h1 {
+    font-size: 30px;
     color: rgb(253, 194, 32);
+}
+
+.container{
+    margin: 20px 15px 20px 15px;
+}
+
+#btnAbfrage{
+    padding-left: 2px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.btn-success{
+    position: absolute;
 }
 
 h2 {
