--- a/styles.scss
+++ b/styles.scss
@@ -6,7 +6,7 @@ body {
 
 h1 {
     font-size: 30px;
-    color: rgb(253, 194, 32);
+    
 }
 
 .container{
@@ -26,11 +26,13 @@ h1 {
 }
 
 h2 {
-    color: white;
+    
+    color: rgb(253, 194, 32);
 }
 
 h3 {
     color: rgb(189, 189, 189);
+    font-size: 20px;
 }
 
 ul {
