--- a/styles.scss
+++ b/styles.scss
@@ -1,12 +1,19 @@
 $company-color: rgb(255, 0, 0);
 
 body {
-    background-color: rgb(88, 88, 88);
+    background-color: #717e87;
 }
 
 h1 {
     font-size: 30px;
     
+}
+
+.navbar-custom{
+    background-color: #314151;
+    .navlinkc{
+        color: white;
+    }
 }
 
 .container{
@@ -31,7 +38,7 @@ h2 {
 }
 
 h3 {
-    color: rgb(189, 189, 189);
+    color: white;
     font-size: 20px;
 }
 
