--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,18 @@ body {
   background-color: #717e87;
 }
 
+.page {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
 h1 {
   font-size: 30px;
 }
