--- a/styles.scss
+++ b/styles.scss
@@ -2,6 +2,13 @@ $company-color: rgb(255, 0, 0);
 
 body {
     background-color: #717e87;
+    
+}
+
+.page{
+    justify-content: center;
+    align-items: center;
+    display: flex;
 }
 
 h1 {
