comment for sass geaddet

--- a/styles.scss
+++ b/styles.scss
@@ -1,3 +1,9 @@
+/*Um scss in css zu konvertieren wird die VSC-Erweiterung "Live Sass Compiler" benötigt.
+Dieses mappt alle Einträge von styles.scss automatisch in eine styles.css
+Unten rechts muss entsprechend der "Watch SASS"-Button aktiviert werden!
+
+*/
+
 $company-color: rgb(253, 194, 32);;
 
 body {
